[tool.poetry]
name = "dataharbor"
version = "0.1.0"
description = ""
authors = ["RodolfoxvData <136007122+Rodolfoxxv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
